dodanie dalszych tagów oraz zoptymalizowanych zdjęć
dodanie dalszych tagów - konstrukcji szkieletu strony oraz zoptymalizowanych prze sqoosh zdjęć

--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
       <section>
         <ul>
           <li>
-            <h3>LOREM IPSUM</h3>
+            <h4>LOREM IPSUM</h4>
             <p></p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
             arcu sem. Sed non sodales dui. Interdum et malesuada
           </li>
           <li>
-            <h3>LOREM IPSUM</h3>
+            <h4>LOREM IPSUM</h4>
             <p></p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
             arcu sem. Sed non sodales dui. Interdum et malesuada
           </li>
           <li>
-            <h3>LOREM IPSUM</h3>
+            <h4>LOREM IPSUM</h4>
             <p></p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
             arcu sem. Sed non sodales dui. Interdum et malesuada
           </li>
           <li>
-            <h3>LOREM IPSUM</h3>
+            <h4>LOREM IPSUM</h4>
             <p></p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
             arcu sem. Sed non sodales dui. Interdum et malesuada
@@ -55,6 +55,15 @@
         </ul>
       </section>
       <section><h2>Czym się zajmujemy</h2></section>
+      <div>
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
     </main>
+    <footer></footer>
   </body>
 </html>
