--- a/index.html
+++ b/index.html
@@ -54,16 +54,94 @@
           </li>
         </ul>
       </section>
-      <section><h2>Czym się zajmujemy</h2></section>
       <div>
+        <h2>Czym się zajmujemy</h2>
+        <img
+          src="./images/img.jpg"
+          alt="Programista pracujący przy klawiaturze"
+          width="370"
+          height="294"
+        />
+        <img
+          src="./images/img (1).jpg"
+          alt="Programista pracujący z telefonem"
+          width="370"
+          height="294"
+        />
+        <img
+          src="./images/img (2).jpg"
+          alt="Programista pracujący z tabletem"
+          width="370"
+          height="294"
+        />
+      </div>
+      <div>
+        <h2>Nasz zespół</h2>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>
+            <figure>
+              <img
+                src="./images/img(3).jpg"
+                alt="Zdjęcie Product Designera"
+                width="270"
+                height="260"
+              />
+              <figcaption>
+                <h3>John Doe</h3>
+                <p>Product Designer</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="./images/img (4).jpg"
+                alt="Zdjęcie Fronten Developera"
+                width="270"
+                height="260"
+              />
+              <figcaption>
+                <h3>John Doe</h3>
+                <p>Fronted Developer</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="./images/img (5).jpg"
+                alt="Zdjęcie Marketingowca"
+                width="270"
+                height="260"
+              />
+              <figcaption>
+                <h3>John Doe</h3>
+                <p>Marketing</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img
+                src="./images/img (6).jpg"
+                alt="Zdjęcie Ul Designera"
+                width="270"
+                height="260"
+              />
+              <figcaption>
+                <h3>John Doe</h3>
+                <p>Ul Designer</p>
+              </figcaption>
+            </figure>
+          </li>
         </ul>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <a href="#">WebStudio</a>
+      <address>m. Warszawa, Aleje Jerozolimskie 21</address>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+48 111 111 111">+48 111 111 111</a>
+    </footer>
   </body>
 </html>
