--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
           </li>
         </ul>
       </section>
-      <div>
+      <section>
         <h2>Czym się zajmujemy</h2>
         <img
           src="./images/img.jpg"
-          alt="Programista pracujący przy klawiaturze"
+          alt="Programista pracujący przy komputerze"
           width="370"
           height="294"
         />
@@ -74,8 +74,8 @@
           width="370"
           height="294"
         />
-      </div>
-      <div>
+      </section>
+      <section>
         <h2>Nasz zespół</h2>
         <ul>
           <li>
@@ -96,7 +96,7 @@
             <figure>
               <img
                 src="./images/img (4).jpg"
-                alt="Zdjęcie Fronten Developera"
+                alt="Zdjęcie Frontend Developera"
                 width="270"
                 height="260"
               />
@@ -135,7 +135,7 @@
             </figure>
           </li>
         </ul>
-      </div>
+      </section>
     </main>
     <footer>
       <a href="#">WebStudio</a>
